fixed resume alignment

--- a/style.css
+++ b/style.css
@@ -128,8 +128,10 @@ body{
 }
 #resume{
 	padding-top:5%;
-	padding-left:20%;
 	padding-bottom:5%;
+}
+#resumeBody{
+	text-align: center;
 }
 .folioHeader{
 	font-family: 'Abril Fatface', cursive;
